KUBERNETES-TEST/Redis/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: test
  labels:
    app: redis
spec:
  clusterIP: None
  selector:
    app: redis
  ports:
    - port: 6379
      name: redis
